# learn-haskell

./: README.md  Tsukuba-2016.odp  concepts.md  desugar-monad.hs  greet-using-overloaded-string.hs  greet-using-string.hs  greet-using-text.hs  greet-winter.txt  hello-world.hs  how-to-submit.txt  kazu.hs  monad-compose.hs  monad-family-tree.hs  new-io.hs  parser-sample.hs  quicktest.hs  setup-tsukuba-2016.sh  tips.md  typeclass.hs  unsafe-io.hs  world-state.hs
choose-name/: LICENSE  choose-name.cabal
choose-name/src/: Main.hs
exercise-1-hello-cat/: TASK.md
exercise-10-free/: TASK.md
exercise-3-string-Num/: String-Num.cabal  TASK.md
exercise-3-string-Num/src/: Main.hs
exercise-4-brain-twister/: TASK.md  input-1.txt  input-2.txt  input-3.txt  output-1.txt  output-2.txt  output-3.txt
exercise-5-1-fast-reverse/: TASK.md  with-string.hs
exercise-5-2-confuse-prelude/: TASK.md  confuse-prelude.cabal
exercise-5-2-confuse-prelude/app/: Main.hs
exercise-5-fast-reverse/: TASK.md
exercise-6-1-data-Vec/: TASK.md  vec.cabal
exercise-6-1-data-Vec/app/: Main.hs
exercise-6-1-data-Vec/src/Data/: Vec.hs
exercise-6-1-data-Vec/test/: Spec.hs
exercise-7-nabe/: TASK.md  nabe.cabal  recipe.txt
exercise-7-nabe/src/: Main.hs
exercise-8-1-safe-pred/: TASK.md  safe-pred.cabal
exercise-8-1-safe-pred/src/: Main.hs
exercise-8-2-learn-parser/: TASK.md  input-arith-2.txt  input-arith-3.txt  input-arith-4.txt  input-arith-5.txt  learn-parser.cabal  output-arith-1.txt  output-arith-2.txt  output-arith-3.txt  output-arith-4.txt  output-arith-5.txt
exercise-8-2-learn-parser/src/: parse-arithmetic.hs
exercise-8-learn-parser/: learn-parser.cabal
exercise-8-learn-parser/src/: parse-S-expression.hs  parse-integer.hs  parse-question.hs
exercise-9-traversable-Vec/: TASK.md  vec.cabal
exercise-9-traversable-Vec/app/: Main.hs  geometry.hs
exercise-9-traversable-Vec/src/Data/: Vec.hs
