name:                learn-parser
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/nushio3/learn-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Takayuki Muranushi
maintainer:          muranushi@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable parse-integer
  hs-source-dirs:      src
  main-is:             parse-integer.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , ansi-wl-pprint

executable parse-question
  hs-source-dirs:      src
  main-is:             parse-question.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , ansi-wl-pprint


executable parse-S-expression
  hs-source-dirs:      src
  main-is:             parse-S-expression.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta

executable parse-arithmetic
  hs-source-dirs:      src
  main-is:             parse-arithmetic.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , ansi-wl-pprint
